AWS 연동 / gh-pages 수정

--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://dldudals0728.github.io/carework-web-page"
+  "homepage": "http://dldudals0728.github.io/carework-web-page-front"
 }
